--- a/gb/23/2/25/n13938268.md
+++ b/gb/23/2/25/n13938268.md
@@ -6,20 +6,20 @@
 <h6>2023年2月25日下午，汽车零件制造商总经理陈建安夫妇在苗栗的苗北艺文中心观赏了神韵世界艺术团的演出。（李怡欣／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2023年02月26日讯】（大纪元记者李怡欣台湾苗栗报导）2023年2月25日下午，汽车零件制造公司总经理陈建安在苗栗的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%97%E5%8C%97%E8%89%BA%E6%96%87%E4%B8%AD%E5%BF%83.md#1">苗北艺文中心</a>观赏了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团的第二场演出，他赞赏声光视觉等技术表现，感觉观赏神韵“身心灵很放松。”</p>
+	<p>【大纪元2023年02月26日讯】（大纪元记者李怡欣台湾苗栗报导）2023年2月25日下午，汽车零件制造公司总经理陈建安在苗栗的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%97%E5%8C%97%E8%89%BA%E6%96%87%E4%B8%AD%E5%BF%83.md#1">苗北艺文中心</a>观赏了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>世界艺术团的第二场演出，他赞赏演出的声光视觉等技术表现，感觉观赏神韵“身心灵很放松。”</p>
 <p>陈建安表示，“相较于西方的话剧，我觉得<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>）更适合我们东方人看，因为有很多故事、情节，或者是一些动作，都是我们比较熟悉的。”</p>
 <p>他特别赞赏神韵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员，“在展现肢体上都非常的轻柔。”“舞蹈很优美，很有古典艺术。”</p>
 <p>他表示，印象最深刻的是女子<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>《水袖》，“感觉那不只是舞蹈，还包含了服装设计在内。”</p>
-<p>陈建安认为，神韵的服装表现了中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F.md#1">传统</a>，“丝绸的、很柔软、很飘逸的感觉，然后再搭配肢体的展现是很好的。”</p>
-<p>神韵的宗旨是恢复中华<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BC%A0%E7%BB%9F.md#1">传统</a>文化，他体会到节目所要传递的内涵，就是“与人为善”。他认为，这个价值观对当今的社会很重要。</p>
+<p>陈建安认为，神韵的服装表现了中国传统服饰的美，“丝绸的、很柔软、很飘逸的感觉，然后再搭配肢体的展现是很好的。”</p>
+<p>神韵的宗旨是恢复<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%AD%E5%8D%8E%E4%BC%A0%E7%BB%9F%E6%96%87%E5%8C%96.md#1">中华传统文化</a>，他体会到节目所要传递的内涵，就是“与人为善”。他认为，这个价值观对当今的社会很重要。</p>
 <p>陈建安认为，“传统现在比较式微，对年轻人来讲，甚至有很多的故事、情节，都不是他们能够熟悉的了。”</p>
 <p>他表示，神韵让他进一步思考，“人在这个社会上，到底应该做些什么对的事情？”</p>
 <p>他称赞神韵，“很认真的去投入做这些事情，让大家都有很好的身心灵的感受。”他想对神韵说，“请继续努力。”</p>
 <h2>企业主：有来看就是有福气</h2>
 <figure id="attachment_13938272" aria-describedby="caption-attachment-13938272" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/02/id13938272-E43AC9C3-886B-4620-9B6F-A38F3FFD84C2.jpg"><img class="size-large wp-image-13938272" src="https://i.epochtimes.com/assets/uploads/2023/02/id13938272-E43AC9C3-886B-4620-9B6F-A38F3FFD84C2-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-13938272" class="wp-caption-text">2023年2月25日下午，企业负责人陈原洲在苗栗的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%8B%97%E5%8C%97%E8%89%BA%E6%96%87%E4%B8%AD%E5%BF%83.md#1">苗北艺文中心</a>观赏了神韵世界艺术团的演出。（李怡欣／大纪元）</figcaption></figure>
-<p>首次观赏神韵的公司负责人陈原洲赞叹，“神韵的艺术表演层次很高，没话讲，目前看过的演出就是神韵最好。”</p>
-<p>第一个节目大幕一拉开，神降临人世，陈原洲感受到，“大家都是神来出世。”</p>
-<p>他对舞台的背景印象很深刻，“动态天幕照着故事演，配合得很好，看着就很舒服。”他赞赏，“尤其是舞蹈演员们，跟动态天幕配合得很好。”</p>
+<p>首次观赏神韵的公司负责人陈原洲赞叹，“神韵的艺术层次很高，没话讲，目前看过的演出就是神韵最好。”</p>
+<p>第一个节目大幕一拉开，神降临人世的场景，让陈原洲感受到，“大家都是神来出世。”</p>
+<p>他对神韵的舞台背景天幕印象很深刻，“动态天幕照着故事演，配合得很好，看着就很舒服。”他赞赏，“尤其是舞蹈演员们，跟动态天幕配合得很好。”</p>
 <p>神韵演绎中华五千年文明，重德行善的传统价值观，陈原洲表示很感动，“有对人的劝善，要有正向、要有正向。”</p>
 <p>他分享体会，“我们做人就是要善良，心要有仙佛，要有善，心要有善，你做得正向，就有神在保佑你。”</p>
 <p>这样的价值观，陈原洲认为对现代社会很重要，“才不会向下沉沦，才会提升。”</p>
@@ -27,47 +27,40 @@
 <p>若用一句话形容神韵，他说，“有来看的人就是有福气。”</p>
 <p>责任编辑：于嫚</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937669.md#1">公司经理享受神韵之华美 “激发美好共鸣”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937715.md#1">副总经理观神韵：制止迫害才有更多希望</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937727.md#1">观神韵 路德维希堡观众领会“与神相连”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937773.md#1">电力公司项目主管赞：神韵让人振奋又愉悦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937812.md#1">工程师称赞神韵故事打动人心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937817.md#1">建筑商赞神韵“真实展现信神的中国”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/24/n9988943.md#1" target="_blank">共产党毁灭人类暴政录——前言</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/11/5/n4566246.md#1" target="_blank">患“不死绝症”大陆女士神奇“重生”</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/4/17/n10309909.md#1" target="_blank">心升：以史为镜看毛邪（中）</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/13/5/19/n3874295.md#1" target="_blank">飞瀑：中共酷刑——灌水</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930206.md#1">来自《唐阵》的感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937705.md#1">【秦鹏观察】中共“和平计划”露脸变丢脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937884.md#1">【全球新闻】中共提俄乌和平建议 欧美轰“没资格”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937530.md#1">【环球直击】乌俄战周年 布林肯：中共若侵台全球灾难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936222.md#1">李克强罕称权力来自人民 分析：最后的呼喊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935889.md#1">中共首次公布全国有近6亿栋房屋 舆论震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935981.md#1">韦伯望远镜发现巨大星系 颠覆人类对宇宙认知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935855.md#1">白纸运动遭秋后算账 27岁男星周峻纬微博被禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935998.md#1">“刘三姐”黄婉秋病危昏迷 最后绝笔信曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936731.md#1">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937673.md#1">香港名媛蔡天凤遭杀害分尸 3名涉案嫌犯被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936303.md#1">冷冻干燥鸡蛋粉末怎么吃才安全？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930473.md#1">50岁前退休不是梦 8个务实的作法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139954.md#1">【古道人生】穷女婿被岳父辱骂 反而得了大财</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137486.md#1">良玉不琢不成器 太上老君寻传人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142748.md#1">社交场合如何与陌生人互动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145892.md#1">【时事金扫描】中共抓“绿光”间谍 火箭坠民宅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145989.md#1">【十字路口】中共介选台湾 为何找上五月天？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145278.md#1">【环球直击】盘点中共对台介选 传逼五月天表态</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145149.md#1">25岁小伙投80万上海开面馆 6天濒临倒闭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145118.md#1">【时事军事】被连续击落的Su-34是什么来头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145378.md#1">河南一中学生突然死亡 传当地民众齐抗议讨说法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145750.md#1">才被爆遭施压表态亲中 五月天贴“异动通知”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144188.md#1">亲共艺人黄安不满中国除夕不放假 网民热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14145064.md#1">汪小菲现重大财务危机 被执行标的达748万元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145856.md#1">胡海泉等明星名人财产遭强制执行 涉资金上亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144974.md#1">汤唯圣诞节晒夫妻甜蜜合照 破除婚变传闻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">巴黎欧莱雅彩妆 自然光泽 打造全天容光焕发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141673.md#1">膝关节疼痛发炎？中医3招让膝盖回春 多用20年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144179.md#1">香蕉减肥 早上吃还是晚上吃好？3个技巧很关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14132024.md#1">8成心血管病可预防 中医荐12类清血管最佳食物</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/25/n13938268.htm">零件商赞神韵传递与人为善 “身心灵很放松”</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938268.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
