--- a/gb/23/2/25/n13938277.md
+++ b/gb/23/2/25/n13938277.md
@@ -11,7 +11,7 @@
 <p>“让人会想全心全意看着大银幕，原汁原味的呈现！”林怡君是第一次观赏演出，她开心地分享感受，“不管是故事的铺陈、<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>、各方面都是非常吸引人的，非常精湛。”“台上三分钟，台下十年功！”</p>
 <p>林怡君也是聚星国际同济会前会长，她说，“虽然一个剧的故事大概只有几分钟，但她能够很简单、一套式整个呈现出来让我们容易看懂欣赏。”</p>
 <p>“音乐也让人触动，有那种‘原味’！”林怡君非常喜欢<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>音乐为自己带来的愉悦与惊喜，“听起来好像乐曲（展现了）以前各个朝代时期的（韵味）。”“不太一样，音乐性不太一样。我听得出来，那朝代不一样，可能听到唐代的曲子，或哪个时代的曲子。”“衣服也一定有变化。”</p>
-<p>林怡君对舞台上穿越古今的小<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E5%89%A7.md#1">舞剧</a>也印象深刻，包括取自三国演义的《单骑救主》，以及西游记的《取经路过紫朱国》。舞剧内涵丰富，“传承做人处事的一个（传统），很励志。”林怡君说明，“就是传统！”“现在社会新闻很多那种血淋淋的，比较负面，比较黑暗。而神韵的演出是比较正向的。”</p>
+<p>林怡君对舞台上穿越古今的小<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%9E%E5%89%A7.md#1">舞剧</a>也印象深刻，包括取自《三国演义》的《单骑救主》，以及《西游记》的《取经路过紫朱国》。舞剧内涵丰富，“传承做人处事的一个（传统），很励志。”林怡君说明，“就是传统！”“现在社会新闻很多那种血淋淋的，比较负面，比较黑暗。而神韵的演出是比较正向的。”</p>
 <h2>价值观要世世代代流传下去</h2>
 <p>“一定有影响，这是正面教育的教材！”林怡君认为波澜壮阔的历史传统，对未来子孙有深切的益处，“尤其现代的父母应该带小孩子来看剧，能把孩子的身心灵提升到最好的状况，寓教于乐是最好的！”</p>
 <p>林怡君接着解释，“推广忠孝节义这方面，让我们在做事处事方面，会有正向的效果。”“这样的行动力（令人佩服），就是应该要这样子流传，世世代代这样流传下去！”</p>
@@ -21,47 +21,40 @@
 <p>“不虚此行！”林怡君说她要让更多人知道神韵深刻丰富的内涵，“回家在自己的社群媒体、FB，会大力地（推广）传送！”</p>
 <p>责任编辑：于嫚</p>
 	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/15/n13907747.md#1">日本一级建筑师：神韵舞剧妙趣横生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/17/n13932195.md#1">京畿民谣演唱歌手：神韵舞剧展现中国的精神</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936304.md#1">消防队长观神韵喜获启发：舞剧令人警醒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937826.md#1">银行经理喜看神韵展现中共统治前的中国</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937931.md#1">小提琴手盛赞神韵：充满活力 传递美好</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937943.md#1">会计师观神韵 赞佩中国文化深具神性</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122274.md#1">世卫要求北京说明儿童肺炎激增详情</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/23/n14122504.md#1">多种病毒流行 世卫要求说明 中国怎么了？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/11/n14134360.md#1">报告：中共加强对维权人士家属的株连迫害</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/5/n14130100.md#1">中国个人债务危机潮到来 “老赖”人数激增</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：乐高乐园的中国元素 文化的旅程</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/21/n14141316.md#1">这些亚马逊好物 让你生活品质大提升</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">UGG 男士雨衣61%折扣</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/12/n14135076.md#1">羊毛衫不缩水不掉色 这种洗衣液是关键</a></li>
 <hr>
-
-
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/16/n10307016.md#1" target="_blank">心升：以史为镜看毛邪（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/5/28/n4165491.md#1" target="_blank">生命在 信仰在</a></li>
-<hr>
-
+<li><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/20/2/23/n11888963.md#1" target="_blank">王友群：唐山大地震是天灾更是人祸</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/19/n13933053.md#1">情缘未了 美高中生车祸身亡转生女友儿子</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927607.md#1">天的谴告 人的机会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921611.md#1">红楼欲坠话红楼：曹雪芹与法国现代作家普鲁斯特 思想意识“惊人相似”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/9/n13798623.md#1">时空可压缩？奇异的梦中之梦</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930206.md#1">来自《唐阵》的感动</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937705.md#1">【秦鹏观察】中共“和平计划”露脸变丢脸</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937884.md#1">【全球新闻】中共提俄乌和平建议 欧美轰“没资格”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/24/n13937530.md#1">【环球直击】乌俄战周年 布林肯：中共若侵台全球灾难</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936222.md#1">李克强罕称权力来自人民 分析：最后的呼喊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935889.md#1">中共首次公布全国有近6亿栋房屋 舆论震惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935981.md#1">韦伯望远镜发现巨大星系 颠覆人类对宇宙认知</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/22/n13935855.md#1">白纸运动遭秋后算账 27岁男星周峻纬微博被禁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13935998.md#1">“刘三姐”黄婉秋病危昏迷 最后绝笔信曝光</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936794.md#1">歌手李玟透露“一辈子最大恐惧” 自曝身体缺陷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936731.md#1">杜琪峯因电影言论遭封杀 黄明志为前辈抱不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/25/n13937673.md#1">香港名媛蔡天凤遭杀害分尸 3名涉案嫌犯被捕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930478.md#1">吃马铃薯会得糖尿病？研究这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936555.md#1">晚上睡不着怎么办？心理师推荐改善方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/16/n13930856.md#1">血液循环好 子宫也会很健康 改善血瘀这样吃</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/23/n13936303.md#1">冷冻干燥鸡蛋粉末怎么吃才安全？ 专家释疑</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/15/n13930473.md#1">50岁前退休不是梦 8个务实的作法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14140085.md#1">金陵之会 王安石苏轼一笑泯恩仇</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/23/n14142273.md#1">二个图谶  当前天象的大预言</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/20/n14139954.md#1">【古道人生】穷女婿被岳父辱骂 反而得了大财</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/15/n14137486.md#1">良玉不琢不成器 太上老君寻传人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/24/n14142748.md#1">社交场合如何与陌生人互动</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145892.md#1">【时事金扫描】中共抓“绿光”间谍 火箭坠民宅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/29/n14145989.md#1">【十字路口】中共介选台湾 为何找上五月天？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145278.md#1">【环球直击】盘点中共对台介选 传逼五月天表态</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145149.md#1">25岁小伙投80万上海开面馆 6天濒临倒闭</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145118.md#1">【时事军事】被连续击落的Su-34是什么来头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145378.md#1">河南一中学生突然死亡 传当地民众齐抗议讨说法</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145750.md#1">才被爆遭施压表态亲中 五月天贴“异动通知”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144188.md#1">亲共艺人黄安不满中国除夕不放假 网民热议</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14145064.md#1">汪小菲现重大财务危机 被执行标的达748万元</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/28/n14145856.md#1">胡海泉等明星名人财产遭强制执行 涉资金上亿</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/27/n14144974.md#1">汤唯圣诞节晒夫妻甜蜜合照 破除婚变传闻</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14121397.md#1">每日更新：家庭智能守护小卫士 半价抱回家</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/15/n14117110.md#1">巴黎欧莱雅彩妆 自然光泽 打造全天容光焕发</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/22/n14141673.md#1">膝关节疼痛发炎？中医3招让膝盖回春 多用20年</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/26/n14144179.md#1">香蕉减肥 早上吃还是晚上吃好？3个技巧很关键</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/7/n14132024.md#1">8成心血管病可预防 中医荐12类清血管最佳食物</a></li>
 <hr>
-
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/25/n13938277.htm">公司负责人：神韵打开国际新思维 扩展视野</a></p><hr>
-
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/2/25/n13938277.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
